# opun8

./: .gitignore  CHANGELOG.md  README.md  opun8.spec  project_tree.txt  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
my-app/: index.html  package.json
my-app/src/: App.css  App.jsx
opay/: index.html  script.js  style.css
src/opun8/: __init__.py  cli.py  main.py  version.py
src/opun8/auth/: __init__.py  github_oauth.py
src/opun8/commands/: __init__.py  badges.py  deploy.py  detect.py  doctor.py  history.py  repo.py
src/opun8/config/: __init__.py  settings.py
src/opun8/core/: __init__.py  detector.py  environment.py  templates.py
src/opun8/providers/render/: __init__.py  auth.py  deploy.py  models.py
src/opun8/providers/vercel/: __init__.py  auth.py  deploy.py
src/opun8/services/: __init__.py  deployment_history.py  env_service.py  git_service.py  navigation.py  recent_projects.py
src/opun8/ui/: __init__.py  console.py  messages.py
tests/: test_deploy_skip_github_contract.py
