[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opun8"
version = "0.1.1"
description = "Universal Deployment Platform for developers."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kakes David", email = "codewithkakes@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "typer",
    "rich",
    "httpx",
    "requests",
    "python-dotenv",
    "pydantic",
    "gitpython",
    "keyring"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
opun8 = "opun8.cli:app"